# data-science-linear-regression

./: .gitignore  README.md  pyproject.toml
data_science_linear_regression/: linear-regression.ipynb  linear_regression.py
tests/: test_linear_regression.py
