[tool.poetry]
name = "data-science-linear-regression"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "data_science_linear_regression"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
